0.20.3 - acknowledge durable device application receipts
